<resources>
    <string name="app_name">My Music App</string>
    <string name="text_search">Find Music</string>
    <string name="Search">Search</string>
    <string name="Botton_Add_Album">Add Album</string>
    <string name="Options">Options</string>
    <string name="Exit">Exit</string>
    <string name="All">All</string>
    <string name="Artist">Artist</string>
    <string name="Album">Album</string>
    <string name="Editor">Editor</string>
    <string name="Year">Year</string>
    <string name="Stars">Stars</string>
    <string name="Title_Album">Add Album</string>
    <string name="Ok">Ok</string>
    <string name="Text_Artist">Artist</string>
    <string name="Text_Album">Album</string>
    <string name="Text_Editor">Editor</string>
    <string name="Text_Year">Year</string>
    <string name="Delete_album">Delete Album</string>
    <string name="Aviso_Delete">Are you sure you want to delete this album?</string>
    <string name="Ok_Aviso_Delete">Ok</string>
    <string name="Toast_deleted">Deleted</string>
    <string name="Toast_Canceled">Canceled</string>
    <string name="Toast1">Showing all albuns.</string>
    <string name="All_main">All</string>
    <string name="Artist_main">Artist</string>
    <string name="Album_main">Album</string>
    <string name="Editor_main">Editor</string>
    <string name="Year_main">Year</string>
    <string name="Stars_main">Stars</string>
    <string name="Toast2">Results found.</string>
    <string name="Toast3">No results found.</string>
    <string name="Ok_button">Ok</string>
    <string name="Toast_Created">Added</string>
    <string name="Toast_No_Created">Empty fields</string>
    <string name="Button_Cancel">Cancel</string>
    <string name="Toast_Cancel">Canceled</string>
    <string name="Add_Album_title">Add Album</string>
    <string name="Link">Link YouTube</string>
    <string name="URL_Invalid">URL invalid</string>
    <string name="Cancel">Cancel</string>
    <string-array name="spinner_options">
        <item>@string/All</item>
        <item>@string/Artist</item>
        <item>@string/Album</item>
        <item>@string/Editor</item>
        <item>@string/Year</item>
        <item>@string/Stars</item>
    </string-array>
</resources>
